# Data-Structures-and-Algorithms

./: README.md
Data Structures/: README.md
Data Structures/Double Ended Queue ADT/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Deque.txx  Makefile  README.md  abstract_deque.hpp  cmake_install.cmake  unittests  unittests.cpp
Data Structures/Double Linked List/: ListInterface.hpp
Data Structures/Double Linked List ADT/: CTestTestfile.cmake  README.md  dLinkedList.txx  unittests
Data Structures/Stack ADT/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  Stack.hpp  Stack.txx  abstract_stack.hpp  cmake_install.cmake  unittests  unittests.cpp
Data Structures/Treap ADT/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  abstract_bst.hpp  cmake_install.cmake  test_catch.cpp  treap_bst.txx  unittests  unittests.cpp
Double Linked List/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dLinkedList.hpp  dNode.hpp  dNode.txx  unittests.cpp
Projects/Basketball DB, Project 6/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  bbdb.cpp  bbdb.hpp  cmake_install.cmake  iter.cpp  student-tests  unittests  unittests.cpp
Projects/Tic Tac Toe, Project 4/: BoardXO.hpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Deque.hpp  Deque.txx  Makefile  README.md  XO.cpp  XO.hpp  cmake_install.cmake  unittests  unittests.cpp
Projects/Turing Machine, Project 1/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ListInterface.hpp  Makefile  README.md  Tape.cpp  Tape.hpp  TuringMachine.cpp  TuringMachine.hpp  cmake_install.cmake  dLinkedList.hpp  dLinkedList.txx  dNode.hpp  dNode.txx  student-tests  unittests  unittests.cpp
Projects/Virus Detector, Project 5/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  abstract_bst.hpp  cmake_install.cmake  db.txt  detect  detect.cpp  treap_bst.hpp  treap_bst.txx
